--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,26 +1,53 @@
-h1{
-    text-align: center;
+h1 {
+  text-align: center;
+  margin-bottom: 30px;
+  color: orange;
+  font-style: oblique;
 }
 p {
-   
-    white-space: normal;
-    max-width: 50%;
+  white-space: normal;
+  max-width: 50%;
+  font-weight: 500;
 }
 a {
-    font-weight: bold;
+  font-weight: bolder;
+}
+a:link{
+    color: yellow;
+}
+a:visited {
+    color: orange;
+    text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
 }
 
 .right {
-    float: right;
-    max-width: 50%;
-
+  float: right;
+  max-width: 50%;
 }
 
 .left {
-    float: left;
-    max-width: 50%;
+  float: left;
+  max-width: 50%;
 }
 
-footer {
-    margin-top: 50%;
+html {
+  background-color: gray
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+.logo {
+  justify-content: start;
+  padding-left: 25px;
+  padding-top: 25px;
+  width: 125px;
+  height: 125px;
+}
+
+img {
+  width: 100%;
+  height: 100%;
 }
