--- a/stylesheet.css
+++ b/stylesheet.css
@@ -2,7 +2,7 @@ h1 {
   text-align: center;
   margin-bottom: 30px;
   color: orange;
-  font-style: oblique;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
 }
 p {
   white-space: normal;
