--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,31 +1,47 @@
 h1 {
   text-align: center;
   margin-bottom: 30px;
-  color: #FAEC94;
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif ;
+  color: #faec94;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 p {
   white-space: normal;
   max-width: 50%;
   font-weight: 500;
-  color: white
+  color: white;
 }
 a {
   font-weight: bolder;
 }
-a:link{
-    color: #FAEC94;
+a:link {
+  color: #faec94;
+}
+li {
+  color: #faec94;
 }
 a:visited {
-    color: #FAEC94;
-    text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+  color: #faec94;
+  text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+}
+
+.list_links {
+  flex: 1;
+  background-color: #303035;
+}
+
+.container {
+    display: flex;
+    min-height: 500px;
+    border: 1px solid black
 }
 
 .right {
   float: right;
   max-width: 49%;
+  min-height: 100%;
   border: 1px solid black;
 }
+
 
 .left {
   float: left;
@@ -34,7 +50,7 @@ a:visited {
 }
 
 html {
-  background-color: #4A4950;
+  background-color: #4a4950;
 }
 
 body {
@@ -53,5 +69,5 @@ body {
 img {
   width: 100%;
   height: 100%;
-  clip-path: circle();
+  
 }
