--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,22 +1,53 @@
 h1 {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.title {
+
+    vertical-align: middle;
+    line-height: auto;
+    padding: 20px;
+
+}
+.title_text{
+    font-size: larger;
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    font-stretch: extra-expanded;
+}
+.logo {
+    display: flex;
+    justify-content: center;
+    align-self: center;
+  
+    margin-left: 25px;
+    margin-right: 1%;
+    margin-top: 25px;
+    width: 125px;
+    height: 125px;
+  }
+  
+
+h3 {
   text-align: center;
   margin-bottom: 30px;
   color: #faec94;
   font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 .calendar {
-    border: 0 solid gray;
-    width:80%;
-    min-height: 500px;
-    height:auto;
-    margin-bottom: 50px;
+  border: 0 solid gray;
+  width: 80%;
+  min-height: 500px;
+  height: auto;
+  margin-bottom: 50px;
 }
 
 p {
   white-space: normal;
   max-width: 50%;
   font-weight: 500;
-  color: white;
+  color: #faec94;
 }
 a {
   font-weight: bolder;
@@ -38,8 +69,8 @@ a:visited {
 }
 
 .container {
-    display: flex;
-    min-height: 500px;
+  display: flex;
+  min-height: 500px;
 }
 
 .right {
@@ -49,7 +80,6 @@ a:visited {
   border: 1px solid black;
 }
 
-
 .left {
   float: left;
   max-width: 49%;
@@ -57,7 +87,7 @@ a:visited {
 }
 
 html {
-  background-color: #4a4950;
+  background-color: #4e4d55;
 }
 
 body {
@@ -66,9 +96,12 @@ body {
 }
 
 .logo {
-  justify-content: start;
-  padding-left: 25px;
-  padding-top: 25px;
+  display: flex;
+  justify-content: center;
+  align-self: center;
+
+  margin-left: 25px;
+  margin-top: 25px;
   width: 125px;
   height: 125px;
 }
@@ -76,5 +109,4 @@ body {
 img {
   width: 100%;
   height: 100%;
-  
 }
