--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,33 +1,30 @@
 h1 {
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 }
 
 .title {
-
-    vertical-align: middle;
-    line-height: auto;
-    padding: 20px;
-
+  vertical-align: middle;
+  line-height: auto;
+  padding: 20px;
 }
-.title_text{
-    font-size: larger;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    font-stretch: extra-expanded;
+.title_text {
+  font-size: larger;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-stretch: extra-expanded;
 }
 .logo {
-    display: flex;
-    justify-content: center;
-    align-self: center;
-  
-    margin-left: 25px;
-    margin-right: 1%;
-    margin-top: 25px;
-    width: 125px;
-    height: 125px;
-  }
-  
+  display: flex;
+  justify-content: center;
+  align-self: center;
+
+  margin-left: 25px;
+  margin-right: 1%;
+  margin-top: 25px;
+  width: 125px;
+  height: 125px;
+}
 
 h3 {
   text-align: center;
@@ -38,16 +35,16 @@ h3 {
 .calendar {
   border: 0 solid gray;
   width: 60%;
-  min-height: 500px;
+  min-height: 340px;
   height: auto;
   margin-bottom: 50px;
 }
 
 p {
-  white-space: normal;
-  max-width: 50%;
-  font-weight: 500;
-  color: #faec94;
+    white-space: normal;
+    max-width: 50%;
+    font-weight: 500;
+    color: white;
 }
 a {
   font-weight: bolder;
@@ -93,6 +90,7 @@ html {
 body {
   display: flex;
   flex-direction: column;
+  color: #faec94;
 }
 
 .logo {
@@ -109,4 +107,10 @@ body {
 img {
   width: 100%;
   height: 100%;
+}
+
+.page_footer {
+  white-space: normal;
+  max-width: 50%;
+  font-weight: 500;
 }
